# spotify-plus-mcp

./: .env.example  README.md  auth.py  pyproject.toml
src/spotify_mcp/: external_metadata.py  server.py  utils.py
src/spotify_plus_mcp/: auth_manager.py  config.py  server.py  spotify_api.py
tests/: test_external_metadata.py
